# JavaCode_test_task

./: .env.example  .gitignore  JavaCode Test Task.postman_collection.json  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: fastapi.yml
nginx/: Dockerfile  nginx.conf
src/: __init__.py  main.py
src/cache/: __init__.py  base_cache.py  redis_cache.py
src/config/: app_config.py  log_config.py
src/db/: database.py  models.py  repositories.py
src/middlewares/: __init__.py  cache_middleware.py
src/routes/: __init__.py  wallet_route.py
src/schemas/: __init__.py  schemas.py
src/services/: __init__.py  wallet_operations.py
src/utils/: __init__.py  uuid_validating.py
stress_tests/: 1000_post.py  __init__.py  stress_get.py  stress_post.py  stress_post_5_1000.txt  stress_random.py  utils.py
stress_tests/results/get/: [old]stress_get_4_1000.txt  stress_get_1000_1000.txt  stress_get_100_1000.txt  stress_get_10_1000.txt  stress_get_1_1000.txt  stress_get_20_1000.txt  stress_get_50_1000.txt  stress_get_5_1000.txt
stress_tests/results/post/: stress_post_1000_1000.txt  stress_post_100_1000.txt  stress_post_10_1000.txt  stress_post_1_1000.txt  stress_post_20_1000.txt  stress_post_50_1000.txt  stress_post_5_1000.txt
stress_tests/results/random/: stress_random_1000_1000.txt  stress_random_1000_2000.txt  stress_random_100_1000.txt  stress_random_10_1000.txt  stress_random_1_1000.txt  stress_random_20_1000.txt  (+2 more)
tests/: conftest.py
tests/test_db/: test_repositories.py
tests/test_endpoints/: __init__.py  test_wallet_endpoints.py
tests/test_services/: __init__.py  test_wallet_operations.py
