[project]
name = "javacode-test-task"
version = "0.1.0"
description = "A web application with 2 endpoints. The application is written on the FastAPI framework, using PostgreSQL, SQLAlchemy, Redis, Docker. Allows you to process 1000 requests per second without errors."
authors = [
    {name = "Vladimir Volosnikov",email = "volosnikovvladimir69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
force-exclude = '''
/(
    \.venv
  | \.venv_dev
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = [
    "**/.venv/*",
    "**/.venv_dev/*"
]

[tool.mypy]
exclude = [
    ".venv",
    ".venv_dev",
]
ignore_missing_imports = true
